экран конца игры

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -29,7 +29,7 @@
                         <p class="play-solo-subtitle">ПРЕВЗОЙДИ СЕБЯ И ПОСТАВЬ НОВЫЙ РЕКОРД</p>
                 </div>
             </div>
-            <div class="link multiplayer-bg">
+            <div class="link multiplayer-bg" onclick="window.location.href = 'game-over.html'">
                 <div class="img-placeholder">
                     <img src="../static/images/multiplayer.png" alt="multiplayer" class="link__image">
                 </div>
